--- a/config/locales/lenit.en.yml
+++ b/config/locales/lenit.en.yml
@@ -1,13 +1,17 @@
 en:
   app:
-    NewEvent: "New Event"
-    AttendedEvents: "Attended events"
-    FollowedEvent: "Followed user's events"
-    QuitEvent: "Quit event"
-    AttendEvent: "Attend event"
-    RegisterProvider: "Register Provider"
-    EventsOfUser: "Events of user"
-    Unfollow: "Unfollow"
-    Follow: "Follow"
-    NotAMember: "Not a member?"
-    AlreadyAMember: "Already a member?"
+    new_event: "New Event"
+    attended_events: "Attended events"
+    followeds_events: "Followed user's events"
+    quit_event: "Quit event"
+    attend_event: "Attend event"
+    register_provider: "Register Provider"
+    events_of_user: "Events of user"
+    unfollow: "Unfollow"
+    follow: "Follow"
+    not_a_member: "Not a member?"
+    already_a_member: "Already a member?"
+    remember_me: "Remember Me"
+    sign_in:
+        email_hint: "Your Email Here"
+        password_hint: "Your Password Here"
