--- a/config/locales/lenit.zh-CN.yml
+++ b/config/locales/lenit.zh-CN.yml
@@ -15,3 +15,28 @@ zh-CN:
     sign_in:
         email_hint: "输入邮箱地址"
         password_hint: "输入密码"
+    signup: "注册"
+    sign_up:
+        avatar: "头像"
+        change_password: "请输入您当前的密码"
+        name: "名称"
+        email: "电子邮箱"
+        passwd: "密码"
+        passwd_conf: "确认密码"
+        current_passwd: "当前密码"
+    nav:
+        logout: "登出"
+        my_events: "我的活动"
+        followers: "粉丝"
+        follows: "关注"
+        my_providers: "我的活动中心"
+        edit_account: "编辑账户"
+        admin: "管理员"
+        login: "登陆"
+        all_providers: "所有活动中心"
+        signup: "注册"
+    form:
+        name: "名称"
+        description: "描述"
+        event_count: "活动数量"
+        manager: "管理者"
