+ Added translation + Unified table display = Updated bundle Signed-off-by: HalFtaN <half.a.tan@gmail.com>

--- a/config/locales/lenit.en.yml
+++ b/config/locales/lenit.en.yml
@@ -9,10 +9,14 @@ en:
     events_of_user: "Events of user"
     unfollow: "Unfollow"
     follow: "Follow"
+    follow: "Followed"
+    followers: "Followers"
+    users: "Users"
     not_a_member: "Not a member?"
     already_a_member: "Already a member?"
     remember_me: "Remember Me"
     signin: "Sign in"
+    user: "User"
     sign_in:
         email_hint: "Your Email Here"
         password_hint: "Your Password Here"
@@ -41,3 +45,13 @@ en:
         description: "Description"
         event_count: "Event Count"
         manager: "Manager"
+        events: "Events"
+        location: "Location"
+        time: "Time"
+        duration: "Duration"
+        visibility: "Visibility"
+        username: "Username"
+        email: "Email"
+        registered: "Registered"
+        role: "Role"
+        providers: "Providers"
