--- a/config/locales/lenit.zh-CN.yml
+++ b/config/locales/lenit.zh-CN.yml
@@ -9,12 +9,15 @@ zh-CN:
     events_of_user: "用户的活动"
     unfollow: "取消关注"
     follow: "关注"
+    followers: "粉丝"
+    users: "用户"
     not_a_member: "还不是会员?"
     already_a_member: "已经是会员？"
     remember_me: "记住账户"
     sign_in:
         email_hint: "输入邮箱地址"
         password_hint: "输入密码"
+    user: "用户"
     signup: "注册"
     sign_up:
         avatar: "头像"
@@ -40,3 +43,13 @@ zh-CN:
         description: "描述"
         event_count: "活动数量"
         manager: "管理者"
+        events: "活动"
+        location: "地点"
+        time: "时间"
+        duration: "活动时长"
+        visibility: "公开"
+        username: "用户名"
+        email: "邮件"
+        registered: "已注册"
+        role: "角色"
+        providers: "发起者"
