home screen tab pill completed! Signed-off-by: HalFtaN <half.a.tan@gmail.com>

--- a/config/locales/lenit.en.yml
+++ b/config/locales/lenit.en.yml
@@ -10,7 +10,7 @@ en:
         follower: "Follower"
     new_event: "New Event"
     attended_events: "Attended events"
-    followeds_events: "Followed user's events"
+    focused_events: "Interesting events"
     quit_event: "Quit event"
     attend_event: "Attend event"
     register_provider: "Register Provider"
